tests/sumo/spec/departure/errors/depart_unsorted/errors.sumo.meso
Warning: Network contains internal links which are ignored. Vehicles will 'jump' across junctions and thus underestimate route lengths and travel times.
Warning: Route file should be sorted by departure time, ignoring 'b'!
